k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80       # Service Port
      targetPort: 5000 # Container Port
      nodePort: 30081 # External Port
  type: NodePort
