k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80       # Service Port
      targetPort: 80  # Container Port
      nodePort: 30080 # External Port
  type: NodePort
